--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I love you</title>
+    <link rel="shortcut icon" href="src/assets/favicon.ico" type="image/x-icon">
+    <title>For You!</title>
   </head>
   <body>
     <div id="root"></div>
