--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="src/assets/favicon.ico" type="image/x-icon">
-    <title>For You!</title>
+    <title>For My Erin From Melio</title>
   </head>
   <body>
     <div id="root"></div>
